# CardInfoScanner

./: CMakeLists.txt  example.txt  main.qml
include/: backend.hpp  luhna_validator.hpp  scan_result.hpp  scan_rule.hpp  scanner_engine.hpp  validator.hpp
src/: backend.cpp  luhna_validator.cpp  main.cpp  scan_rule.cpp
